<resources>
    <string name="app_name">Task Manager</string>
    <string name="menu_all">All</string>
    <string name="menu_active">Active</string>
    <string name="menu_done">Done</string>
    <string name="hint_title">Task Title</string>
    <string name="hint_description">Task Description</string>
    <string name="btn_choose_image">Choose Image</string>
    <string name="btn_save_task">Save Task</string>
    <string name="error_title_required">Title is required</string>
    <string name="btn_edit_task">Edit Task</string>
    <string name="btn_delete_task">Delete Task</string>
    <string name="dialog_delete_title">Delete Task?</string>
    <string name="dialog_delete_message">Are you sure you want to delete this task?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="settings_title">Settings</string>
    <string name="settings_content">Settings Screen</string>
    <string name="nav_header_title">Task Manager</string>
    <string name="label_task_list">My Tasks</string>
    <string name="label_add_edit_task">Task</string>
    <string name="label_task_details">Task Details</string>
    <string name="settings_delete_all_tasks">Delete All Tasks</string>
    <string name="dialog_delete_all_title">Delete All Tasks?</string>
    <string name="dialog_delete_all_message">Are you sure you want to delete all tasks? This cannot be undone.</string>

    <string name="pref_language">Language</string>
    <string name="lang_english">English</string>
    <string name="lang_hebrew">Hebrew</string>
    <string name="pref_dark_mode">Dark Mode</string>
    <string name="pref_font_size">Font Size</string>
    <string name="font_small">Small</string>
    <string name="font_normal">Normal</string>
    <string name="font_large">Large</string>

    <string name="label_priority">Priority</string>
    <string name="priority_low">Low</string>
    <string name="priority_normal">Normal</string>
    <string name="priority_high">High</string>
    <string name="btn_pick_date">Pick Date</string>
    <string name="label_due_date">Due Date: %s</string>
    <string name="no_date_selected">No Date</string>
    
    <string name="nav_bottom_all">All Tasks</string>
    <string name="nav_bottom_today">Today</string>
    <string name="nav_bottom_settings">Settings</string>

    <string name="sort_date">Sort by Date</string>
    <string name="sort_priority">Sort by Priority</string>
    
    <string name="filter_show_all">Show All</string>
    <string name="filter_show_active">Show Active</string>
    <string name="filter_show_done">Show Done</string>
    <string name="toast_title_required">Please enter a task title</string>

    <string name="label_todays_progress">Progress</string>
    <string name="progress_text">%d / %d Done</string>

    <string name="task_deleted">Task deleted</string>
    <string name="undo">UNDO</string>
</resources>